[gd_scene load_steps=10 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://button.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="Game"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Click any square to start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Game"]
one_shot = true

[node name="GridContainer" type="GridContainer" parent="Game"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 98.0
margin_top = 48.0
margin_right = -98.0
margin_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Square1" type="Button" parent="Game/GridContainer"]
self_modulate = Color( 0, 0, 1, 1 )
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
script = ExtResource( 2 )

[node name="Square2" type="Button" parent="Game/GridContainer"]
self_modulate = Color( 1, 0, 1, 1 )
margin_left = 154.0
margin_right = 304.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
script = ExtResource( 2 )

[node name="Square3" type="Button" parent="Game/GridContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 154.0
margin_right = 150.0
margin_bottom = 304.0
rect_min_size = Vector2( 150, 150 )
script = ExtResource( 2 )

[node name="Square4" type="Button" parent="Game/GridContainer"]
self_modulate = Color( 1, 1, 0, 1 )
margin_left = 154.0
margin_top = 154.0
margin_right = 304.0
margin_bottom = 304.0
rect_min_size = Vector2( 150, 150 )
script = ExtResource( 2 )

[node name="InfoButton" type="Button" parent="Game"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -29.0
margin_right = -6.0
margin_bottom = -6.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Credits and license"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="RichTextLabel" parent="Game"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 33.0
margin_right = -13.0
margin_bottom = -33.0
mouse_filter = 2
text = "MIT License

Copyright (c) 2021 penthyoletamine

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

##################################################

This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2021 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

-- Godot Engine <https://godotengine.org>"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Game/Timer" to="Game" method="_on_Timer_timeout"]
[connection signal="pressed" from="Game/GridContainer/Square1" to="Game" method="click" binds= [ 0 ]]
[connection signal="pressed" from="Game/GridContainer/Square2" to="Game" method="click" binds= [ 1 ]]
[connection signal="pressed" from="Game/GridContainer/Square3" to="Game" method="click" binds= [ 2 ]]
[connection signal="pressed" from="Game/GridContainer/Square4" to="Game" method="click" binds= [ 3 ]]
[connection signal="pressed" from="Game/InfoButton" to="Game" method="_on_InfoButton_pressed"]
